@@ -18,9 +18,7 @@
 # include <config.h>
 #endif
 
-#if defined(WIN32) || defined(__APPLE__)
-# include <glibmm/i18n.h>
-#endif
+#include <glibmm/i18n.h>
 
 #include <display/curve.h>
 #include <libnr/n-art-bpath.h>
