@@ -15,9 +15,7 @@
 # include "config.h"
 #endif
 
-#if defined(WIN32) || defined(__APPLE__)
-# include <glibmm/i18n.h>
-#endif
+#include <glibmm/i18n.h>
 
 #include "sp-switch.h"
 #include "display/nr-arena-group.h"
